--- a/Mapping_Multiple_Points/index.html
+++ b/Mapping_Multiple_Points/index.html
@@ -25,6 +25,9 @@
     <!-- API key -->
     <script type="text/javascript" src="static/js/config.js"></script>
 
+    <!-- Cities Data -->
+    <script type="text/javascript" src="static/js/cities.js"></script>
+
     <!-- Out JavaScript -->
     <script type="text/javascript" src="static/js/logic.js"></script>
 
